objects/zkmulti__NaftaCo__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__BlanketPeriodBeginDate__c</fullName>
        <label>Blanket Period Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__BlanketPeriodEndDate__c</fullName>
        <label>Blanket Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__OverrideSoldTo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Sold To</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerAddressCity__c</fullName>
        <label>Producer Address City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerAddressCountryCode__c</fullName>
        <label>Producer Address Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerAddressPostalCode__c</fullName>
        <label>Producer Address Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerAddressStateProvince__c</fullName>
        <label>Producer Address State/Province</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerAddressStreet__c</fullName>
        <label>Producer Address Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerAttentionName__c</fullName>
        <label>Producer Attention Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerCompanyName__c</fullName>
        <label>Producer Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerEmail__c</fullName>
        <label>Producer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerPhone__c</fullName>
        <label>Producer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkmulti__ProducerTaxId__c</fullName>
        <label>Producer Tax ID</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureContactCompany__c</fullName>
        <label>Signature Contact Company</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureContactName__c</fullName>
        <label>Signature Contact Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureContactPhone__c</fullName>
        <label>Signature Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>zkmulti__SignatureContactTitle__c</fullName>
        <label>Signature Contact Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>NAFTA_COs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToCity__c</fullName>
        <label>Sold To City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToCompanyName__c</fullName>
        <label>Sold To Company Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToContactName__c</fullName>
        <label>Sold To Contact Name</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>NAFTA_COs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToCountry__c</fullName>
        <label>Sold To Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToPhone__c</fullName>
        <label>Sold To Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToStateProvince__c</fullName>
        <label>Sold To State/Province</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToStreet__c</fullName>
        <label>Sold To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToTaxID__c</fullName>
        <label>Sold To TaxID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__SoldToZipPostalCode__c</fullName>
        <label>Sold To Zip/Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>USMCA CO</label>
    <listViews>
        <fullName>Nolan_Daigle_NaftaCo</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>USMCA-CO-{00000000}</displayFormat>
        <label>USMCA CO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>USMCA COs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>